# desgrana

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql.yml
app-template/Contents/: Info.plist
app-template/Contents/Resources/: AppIcon.icns  Assets.car
desgrana/: .swiftlint.yml  Package.swift
desgrana/Sources/App/: App.swift  Constants.swift  DAW.swift  DAWArdour.swift  DAWExport.swift  DAWReaper.swift  SplitViewModel.swift  UpdateAvailableView.swift  UpdateCheck.swift
desgrana/Sources/App/DAW/: DAW.swift  DAWAudacity.swift  DAWOpenURL.swift
desgrana/Sources/App/Views/: AboutView.swift  ContentView.swift  DropZoneView.swift  SettingsView.swift  TrackListView.swift  TransientView.swift  UpdateAvailableView.swift
desgrana/Sources/BridgeC/: Bridge.swift
desgrana/Sources/BridgeLinux/: Bridge.swift
desgrana/Sources/CLI/: Platform.swift  main.swift
desgrana/Sources/CWav/: dr_wav.c
desgrana/Sources/Core/: Bext.swift  Constants.swift  DAWExport.swift  Demux.swift  ExtractionReport.swift  IXML.swift  Markers.swift  OutputMetadata.swift  Pairing.swift  RIFFBytes.swift  RIFFWrite.swift  SELog.swift  Session.swift  SessionFiles.swift  Snap.swift  SplitSession.swift  SplitterShared.swift  Types.swift  Version.swift  WAVReader.swift  WAVWriter.swift  X32Scene.swift
desgrana/Sources/CoreAudioToolbox/: Splitter.swift
desgrana/Sources/CoreLinux/: SplitterDrWav.swift
desgrana/Sources/CoreMac/: Splitter.swift
desgrana/Sources/CoreWav/: SplitterDrWav.swift
desgrana/Tests/: test_split.py  test_update_check.py
desgrana/Tests/CoreTests/: ApplyUsbUnpairRenameTests.swift  BextTests.swift  DAWExportTests.swift  DemuxTests.swift  DetectStereoPairsTests.swift  IXMLTests.swift  MarkersTests.swift  RF64Tests.swift  SELogTests.swift  SessionTests.swift  SnapTests.swift  UpdateCheckTests.swift  WAVWriterTests.swift  X32SceneTests.swift
desgrana/Tests/WriterTests/: WAVReaderTests.swift  WAVWriterCompareTests.swift
desgrana/Tests/fixtures/case02_4mono/expected/: test_markers.mid
desgrana/Tests/fixtures/case03_mixed/expected/: test_markers.csv  test_markers.txt
desgrana/Tests/fixtures/case05_snap/session/: test.snap
desgrana/Tests/fixtures/case07_usb_stereo/session/: USB_Stereo.snap
desgrana/Tests/fixtures/case08_usb_stereo/session/: test.snap
docs/: version.json
icon.icon/: icon.json
linux/: CMakeLists.txt  DesgranaWindow.cpp  DesgranaWindow.hpp
linux/include/: desgrana_bridge.h
make/: linux.mk  macos.mk  release.mk
packaging/linux/: README.md  collect-swift-libs.sh  desgrana-gui.desktop
packaging/linux/deb/: builder.dockerfile  packager.dockerfile  tester.dockerfile
packaging/linux/deb/debian/: changelog  control  copyright  desgrana-gui.1  desgrana.1  desgrana.install  desgrana.lintian-overrides  desgrana.manpages  rules
packaging/linux/rpm/: desgrana.spec  packager.dockerfile
packaging/macos/: make-dmg.sh
packaging/win/: collect-swift-dlls.ps1  desgrana.iss
qt/: CMakeLists.txt  DesgranaWindow.cpp  DesgranaWindow.hpp  SplitWorker.cpp  SplitWorker.hpp  desgrana.rc.in  main.cpp
qt/include/: desgrana_bridge.h
scripts/: build_web.py  make_icon.py
web/: index.html  template.html.j2  version.json
web/i18n/: common.toml  en.toml  fr.toml
